--- a/penyebaran.html
+++ b/penyebaran.html
@@ -24,7 +24,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('ayam.jpg');
+  background-image: url("Header ayam.jpg");
   min-height: 400px
 }
 
@@ -97,15 +97,18 @@ body, html {
   <p>Flu burung adalah infeksi virus yang menyerang bukan hanya burung, tetapi juga manusia, dan hewan lain. Namun sebagian besar adalah unggas. H5N1 adalah bentuk paling umum dari flu burung.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-      <img src="/w3images/avatar_hat.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+      <p><b>Penyebaran Flu Burung</b></p><br>
+      <img src="Foto flu burung 1.jpg" class="w3-round w3-image" alt="Flu burung" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Wabah flu burung pertama kali ditemukan di Italia pada 1878. Tetapi baru dikenali dalam wabah besar yang melanda peternakan ayam di Amerika Serikat (AS) pada 1924-1925. 
+Saat itu flu burung masih menular di antara unggas dan belum terjadi penularan ke hewan lain. Pada Maret 1997, flu burung dari subtipe H5N1 mulai menjangkiti peternakan ayam di Hongkong. 
+Dua bulan kemudian, flu itu menular ke seorang anak laki-laki berusia tiga tahun. Selanjutnya, 17 orang terjangkit virus yang sama di Hong Kong pada Desember 1997. 
+Lalu pemerintah mulai membinasakan 1,5 juta ayam. Pada Februari 2003, virus flu burung H5N1 kembali menyerang Hongkong dan menulari dua orang. Sampai 2004 hampir di seluruh dunia flu burung pada unggas telah mewabah. 
+ Virus H5N1 kemudian menjadi perhatian utama para ahli, karena dapat bermutasi dengan cepat. Virus itu juga mampu berubah menjadi beberapa subtipe virus yang baru sehingga dapat menular ke spesies lain, termasuk manusia. 
+    </p>
     </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
