--- a/Penanggulangan.html
+++ b/Penanggulangan.html
@@ -79,7 +79,7 @@ body, html {
     <a href="tentang wabah.html" class="w3-bar-item w3-button" onclick="toggleFunction()">TENTANG WABAH</a>
     <a href="penyebaran.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PENYEBARAN</a>
     <a href="penanggulangan.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PENANGGULANGAN</a>
-    <a href="profil.html" class="w3-bar-item w3-button">Tentang</a>
+    <a href="about us.html" class="w3-bar-item w3-button">Tentang</a>
   </div>
 </div>
 
