--- a/about us.html
+++ b/about us.html
@@ -78,14 +78,14 @@ body, html {
     <a href="tentang wabah.html" class="w3-bar-item w3-button" onclick="toggleFunction()">TENTANG WABAH</a>
     <a href="penyebaran.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PENYEBARAN</a>
     <a href="penanggulangan.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PENANGGULANGAN</a>
-    <a href="about us.html" class="w3-bar-item w3-button">Tentang</a>
+    <a href="profil.html" class="w3-bar-item w3-button">Tentang</a>
   </div>
 </div>
 
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min w3-animate-top" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Penyebaran Virus<span class="w3-hide-small">Avian Influenza</span> 
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">About<span class="w3-hide-small">Us</span> 
   </div>
 </div>
 
@@ -100,6 +100,7 @@ body, html {
       <img src="Foto flu burung 1.jpg" class="w3-round w3-image" alt="Flu burung" width="500" height="333">
     </div>
 
+    <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-padding-large">
       <p>Wabah flu burung pertama kali ditemukan di Italia pada 1878. Tetapi baru dikenali dalam wabah besar yang melanda peternakan ayam di Amerika Serikat (AS) pada 1924-1925. 
 Saat itu flu burung masih menular di antara unggas dan belum terjadi penularan ke hewan lain. Pada Maret 1997, flu burung dari subtipe H5N1 mulai menjangkiti peternakan ayam di Hongkong. 
@@ -109,13 +110,6 @@ Lalu pemerintah mulai membinasakan 1,5 juta ayam. Pada Februari 2003, virus flu 
     </p>
     </div>
   </div>
-  
-    <div class="w3-col m6 w3-padding-large">
-      <p>Selain Amerika Serikat dan kawasan Asia,  negara-negara yang pernah mengalami wabah flu burung antara lain Skotlandia, Inggris, Kanada, Australia, Jerman, Irlandia, Meksiko, Italia, Belanda, Belgia, dan Afrika Selatan. 
-    </p>
-    </div>
-  </div>
-
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
   <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
   <div class="w3-light-grey">
