--- a/index.html
+++ b/index.html
@@ -65,12 +65,11 @@ body, html {
     <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
       <i class="fa fa-bars"></i>
     </a>
-    <a href="index.html" class="w3-bar-item w3-button">HOME</a>
-    <a href="tentang wabah.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> TENTANG WABAH</a>
-    <a href="penyebaran.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PENYEBARAN</a>
-    <a href="penanggulangan.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> PENANGGULANGAN</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i> Tentang</a>
+    <a href="index.html" class="w3-bar-item w3-text-black w3-hover-text-white w3-hover-black w3-button"></i> HOME</a>
+    <a href="tentang wabah.html" class="w3-bar-item w3-text-black w3-button w3-hover-text-white w3-hover-black w3-hide-small"> TENTANG WABAH</a>
+    <a href="penyebaran.html" class="w3-bar-item w3-text-black w3-button w3-hover-text-white w3-hover-black w3-hide-small "> PENYEBARAN</a>
+    <a href="penanggulangan.html" class="w3-bar-item w3-text-black w3-button w3-hover-text-white w3-hover-black w3-hide-small"> PENANGGULANGAN</a>
+    <a href="about us.html" class="w3-bar-item w3-button w3-text-black w3-hide-small w3-right"> ABOUT US</a>
     </a>
   </div>
 
@@ -79,7 +78,7 @@ body, html {
     <a href="tentang wabah.html" class="w3-bar-item w3-button" onclick="toggleFunction()">TENTANG WABAH</a>
     <a href="penyebaran.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PENYEBARAN</a>
     <a href="penanggulangan.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PENANGGULANGAN</a>
-    <a href="profil.html" class="w3-bar-item w3-button">Tentang</a>
+    <a href="about us.html" class="w3-bar-item w3-button">Tentang</a>
   </div>
 </div>
 
@@ -191,7 +190,7 @@ body, html {
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+      <img src="daffa.jpg" style="width:80%" onclick="onClick(this)" class="w3-hover-opacity" alt="Hilmi Daffa Windardi">
     </div>
 
     <div class="w3-col m3">
