--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@ body, html {
 </div>
 
 <!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+<div class="bgimg-1 w3-display-container w3-opacity-min w3-animation-top" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
-    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">AVIAN <span class="w3-hide-small">INFLUENZA</span> 
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">AVIAN INFLUENZA<span class="w3-hide-small">Disease</span> 
   </div>
 </div>
 
