--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -69,8 +69,8 @@ body, html {
     <a href="tentang wabah.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> TENTANG WABAH</a>
     <a href="penyebaran.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PENYEBARAN</a>
     <a href="penanggulangan.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> PENANGGULANGAN</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i> Tentang</a>
+    <a href="about us.html" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
+      <i class="fa fa-search"></i> About Us</a>
     </a>
   </div>
 
@@ -79,12 +79,12 @@ body, html {
     <a href="tentang wabah.html" class="w3-bar-item w3-button" onclick="toggleFunction()">TENTANG WABAH</a>
     <a href="penyebaran.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PENYEBARAN</a>
     <a href="penanggulangan.html" class="w3-bar-item w3-button" onclick="toggleFunction()">PENANGGULANGAN</a>
-    <a href="about us.html" class="w3-bar-item w3-button">Tentang</a>
+    <a href="about us.html" class="w3-bar-item w3-button">About Us</a>
   </div>
 </div>
 
 <!-- First Parallax Image with Logo Text -->
-<div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
+<div class="bgimg-1 w3-display-container w3-opacity-min w3-animation-top" id="home">
   <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Penanggulangan <span class="w3-hide-small">Avian Influenza</span> 
   </div>
@@ -98,11 +98,11 @@ body, html {
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
       <p><b><i class="fa fa-user w3-margin-right"></i>Cara Penanggulangan</b></p><br>
-      <img src="/labkom/tanggap flu burung.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="tanggap flu burung.jpg" width="500" height="333">
+      <img src="tanggap flu burung.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="tanggap flu burung.jpg" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
-    <div class="w3-col m6 w3-hide-small w3-padding-large">
+    <div class="w3-col m6 w3-padding-large">
       <p>Pemerintah menyusun strategi untuk menyetop penyebaran flu burung yang terus merenggut korban jiwa. Satu di antaranya dengan memusnahkan unggas di perkotaan yang berada dalam radius satu kilometer dari unggas yang dipastikan terjangkit virus avian influenza. 
 
 Pemerintah juga memvaksinasi setiap unggas di radius tiga kilometer dari unggas yang terjangkit flu burung. Hal ini terutama akan dilakukan di perkotaan di lima provinsi yakni Jawa Barat, DKI Jakarta, Lampung, Banten, dan Jawa Tengah. Persediaan obat antiflu burung atau Tamiflu pun ditambah. 
