--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -66,11 +66,10 @@ body, html {
       <i class="fa fa-bars"></i>
     </a>
     <a href="index.html" class="w3-bar-item w3-button">HOME</a>
-    <a href="tentang wabah.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> TENTANG WABAH</a>
-    <a href="penyebaran.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PENYEBARAN</a>
-    <a href="penanggulangan.html" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> PENANGGULANGAN</a>
-    <a href="about us.html" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">
-      <i class="fa fa-search"></i> About Us</a>
+    <a href="tentang wabah.html" class="w3-bar-item w3-button w3-hide-small">TENTANG WABAH</a>
+    <a href="penyebaran.html" class="w3-bar-item w3-button w3-hide-small">PENYEBARAN</a>
+    <a href="penanggulangan.html" class="w3-bar-item w3-button w3-hide-small">PENANGGULANGAN</a>
+    <a href="about us.html" class="w3-bar-item w3-button w3-hide-small w3-right w3-hover-red">ABOUT US</a>
     </a>
   </div>
 
