--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -115,7 +115,7 @@ Direktur Pemberantasan Penyakit Bersumber Binatang Departemen Kesehatan Hariadi 
     
 <li>Tracing masyarakat yang datang dari wilayah yang terinfeksi virus flu burung<li>    
 <li>Menahan pergerakan masyarakat di daerah terinfeksi<li>
-<li>Pemantauan peternakan unggas-unggas yang berpotensi terinfeksi<li></p>
+<li>Pemantauan peternakan unggas-unggas yang berpotensi terinfeksi<li>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
   <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
