--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -111,11 +111,11 @@ Pemerintah melibatkan semua masyarakat demi lancarnya program ini. Strategi lain
 Direktur Pemberantasan Penyakit Bersumber Binatang Departemen Kesehatan Hariadi Wibisono, siang tadi, telah memberikan penyuluhan kepada tim kesehatan dan masyarakat untuk menyosialisasikan program ini.
 </p>
     </div>
-      <p>Action plan yang dapat dilakukan untuk meminimalisir penyebaran wabah flu burung yaitu:</p>
-    
-<li>Tracing masyarakat yang datang dari wilayah yang terinfeksi virus flu burung<li>    
-<li>Menahan pergerakan masyarakat di daerah terinfeksi<li>
-<li>Pemantauan peternakan unggas-unggas yang berpotensi terinfeksi<li>
+      <p>Action plan yang dapat dilakukan untuk meminimalisir penyebaran wabah flu burung yaitu:
+</p>
+<li>Tracing masyarakat yang datang dari wilayah yang terinfeksi virus flu burung</li>    
+<li>Menahan pergerakan masyarakat di daerah terinfeksi</li>
+<li>Pemantauan peternakan unggas-unggas yang berpotensi terinfeksi</li>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
   <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
