--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -111,6 +111,7 @@ Pemerintah melibatkan semua masyarakat demi lancarnya program ini. Strategi lain
 Direktur Pemberantasan Penyakit Bersumber Binatang Departemen Kesehatan Hariadi Wibisono, siang tadi, telah memberikan penyuluhan kepada tim kesehatan dan masyarakat untuk menyosialisasikan program ini.
 </p>
     </div>
+    <div class="w3-col m6 w3-padding-large">
       <p>Action plan yang dapat dilakukan untuk meminimalisir penyebaran wabah flu burung yaitu:
 </p>
 <li>Tracing masyarakat yang datang dari wilayah yang terinfeksi virus flu burung</li>    
