--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -114,10 +114,10 @@ Direktur Pemberantasan Penyakit Bersumber Binatang Departemen Kesehatan Hariadi 
     <div class="w3-col m6 w3-padding-large">
       <p>Action plan yang dapat dilakukan untuk meminimalisir penyebaran wabah flu burung yaitu:
 </p>
-<li>Tracing masyarakat yang datang dari wilayah yang terinfeksi virus flu burung</li>    
-<li>Menahan pergerakan masyarakat di daerah terinfeksi</li>
-<li>Pemantauan peternakan unggas-unggas yang berpotensi terinfeksi</li>
-  </div>
+<li>Tracing masyarakat yang datang dari wilayah yang terinfeksi virus flu burung.</li>    
+<li>Menahan pergerakan masyarakat di daerah terinfeksi.</li>
+<li>Pemantauan peternakan unggas-unggas yang berpotensi terinfeksi.</li>
+    </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
   <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
   <div class="w3-light-grey">
