--- a/penanggulangan.html
+++ b/penanggulangan.html
@@ -118,6 +118,15 @@ Direktur Pemberantasan Penyakit Bersumber Binatang Departemen Kesehatan Hariadi 
 <li>Menahan pergerakan masyarakat di daerah terinfeksi.</li>
 <li>Pemantauan peternakan unggas-unggas yang berpotensi terinfeksi.</li>
     </div>
+    <div class="w3-col m6 w3-padding-large">
+      <p>Prinsip dasar yang diterapkan dalam pencegahan, pengendalian, dan pemberantasan Avian Influenza atau flu burung, adalah:
+</p>
+<li>Mencegah kontak antara hewan peka dengan virus AI (Avian Influenza).</li>
+<li>Menghentikan produksi virus AI oleh unggas tertular (menghilangkan virus AI dengan dekontaminasi/ disinfeksi).</li>
+<li>Meningkatkan resistensi (pengebalan) dengan vaksinasi.</li>
+<li>Menghilangkan sumber penularan virus.</li>
+<li>Peningkatan kesadaran masyarakat (public awareness).</li>
+    </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
   <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
   <div class="w3-light-grey">
