--- a/tentang wabah.html
+++ b/tentang wabah.html
@@ -24,8 +24,8 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/w3images/parallax1.jpg');
-  min-height: 100%;
+  background-image: url("flu burung 4.jpg");
+  min-height: 400px
 }
 
 /* Second image (Portfolio) */
@@ -36,7 +36,7 @@ body, html {
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/w3images/parallax3.jpg");
+  background-image: url("petasebaran.jpg");
   min-height: 400px;
 }
 
@@ -85,22 +85,37 @@ body, html {
 </div>
 
 <!-- Container (About Section) -->
-<div class="w3-content w3-container w3-padding-64" id="about">
+<div class="w3-content w3-container w3-padding-64" id="flu burung">
   <h3 class="w3-center">FLU BURUNG</h3>
   <p class="w3-center"><em>H5N1</em></p>
+<div class="w3-container w3-center">
   <p>Flu burung adalah infeksi virus yang menyerang bukan hanya burung, tetapi juga manusia, dan hewan lain. Namun sebagian besar adalah unggas. H5N1 adalah bentuk paling umum dari flu burung.</p>
+</div>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-      <img src="/w3images/avatar_hat.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+      <p><b>Gejala Flu Burung</b></p><br>
+      <img src="sakit.jpg" class="w3-round w3-image w3-image" alt="flu burung" width="1000px" height="666px">
     </div>
 
     <!-- Hide this text on small devices -->
-    <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
+    <div class="w3-col m6 w3-justify w3-padding-large">
+<p>Gejala flu burung umumnya baru muncul setelah 3–5 hari terpapar virus ini. Gejala yang timbul dapat berbeda-beda, mulai dari yang ringan hingga parah. Meskipun kadang orang yang terinfeksi virus flu burung bisa tidak merasakan gejala apa pun, tetapi secara umum, penderita flu burung akan mengalami gejala berupa:</p>
+
+      <ul>
+
+          <li>Demam</li>
+          <li>Batuk</li>
+          <li>Sakit tenggorokan</li>
+          <li>Nyeri otot</li>
+          <li>Sakit kepala</li>
+          <li>Kelelahan</li>
+          <li>Hidung berair atau tersumbat</li>
+          <li>Sesak napas</li>
+
+      </ul>
+
+<p> Pada beberapa penderita, gejala lain yang juga dapat timbul antara lain muntah, sakit perut, diare, gusi berdarah, mimisan, nyeri dada, dan mata merah (konjungtivitis). Pada infeksi yang berat, flu burung bahkan bisa menyebabkan pneumonia, Acute Respiratory Distress Syndrome (ARDS), gagal napas, kejang, dan gangguan sistem saraf.</p>
+  </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
   <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
@@ -244,15 +259,8 @@ body, html {
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-  <div class="w3-xlarge w3-section">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
-  </div>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  <p>Created by Krisna Yudha Pratama, Brigitta Natasha Widiaputri, & Rahmania Nur Diniyah</p><br><p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</p>
+
 </footer>
  
 <script>
