--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@ body, html {
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("ayam.jpg");
+  background-image: url("flu burung 4.jpg");
   min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("ayam.jpg");
+  background-image: url("Header ayam.jpg");
   min-height: 400px;
 }
 
@@ -133,15 +133,12 @@ body, html {
   <p>Flu burung adalah infeksi virus yang menyerang bukan hanya burung, tetapi juga manusia, dan hewan lain. Namun sebagian besar adalah unggas. H5N1 adalah bentuk paling umum dari flu burung.</p>
   <div class="w3-row">
     <div class="w3-col m6 w3-center w3-padding-large">
-      <p><b><i class="fa fa-user w3-margin-right"></i>My Name</b></p><br>
-      <img src="/w3images/avatar_hat.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me" width="500" height="333">
+      <img src="FLU BURUNG.png" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Bird flu" width="500" height="333">
     </div>
 
     <!-- Hide this text on small devices -->
     <div class="w3-col m6 w3-hide-small w3-padding-large">
-      <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-        dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <p>Di website ini akan dibahas mengenai wabah flu burung. Yang akan dibahas yakni gejala, pencegahan, penularan beserta pengobatan flu burung, kasus penyebaran flu burung, dan penanggulangan wabah flu burung.</p>
     </div>
   </div>
   <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
@@ -180,43 +177,42 @@ body, html {
 
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
-  <h3 class="w3-center">MY WORK</h3>
-  <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
+  <p class="w3-center"><em>Here are some picture of Avian Influenza.<br> Click on the images to make them bigger</em></p><br>
 
   <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
   <div class="w3-row-padding w3-center">
     <div class="w3-col m3">
-      <img src="/w3images/p1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+      <img src="Flu burung 2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Avian Influenza in South Korea">
     </div>
 
     <div class="w3-col m3">
-      <img src="daffa.jpg" style="width:80%" onclick="onClick(this)" class="w3-hover-opacity" alt="Hilmi Daffa Windardi">
+      <img src="Flu burung 3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Avian Influenza in Republic of Srpska">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+      <img src="Flu burung 4.0.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Avian Influenza in Vietnam">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+      <img src="Flu burung 5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Avian Influenza in Balkan">
     </div>
   </div>
 
   <div class="w3-row-padding w3-center w3-section">
     <div class="w3-col m3">
-      <img src="/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+      <img src="Flu burung 6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Avian Influenza in Hong Kong">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+      <img src="Flu burung 7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Avian Influenza in Netherlands">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+      <img src="Flu burung 8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Hong Kong Culls 20.000 Chicken">
     </div>
 
     <div class="w3-col m3">
-      <img src="/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
+      <img src="Flu burung 9.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="France slaughtering 600,000 ducks due to bird flu">
     </div>
     <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
   </div>
